--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
 
-    <title>Memory Game</title>
+    <title>Jogo da Memoria</title>
 
     <link rel="stylesheet" href="styles.css">
 </head>
